--- a/pred_voter.ipynb
+++ b/pred_voter.ipynb
@@ -99,38 +99,26 @@
    "outputs": [],
    "source": [
     "# is the full ds used for submission?\n",
-    "full = False\n",
+    "full = True\n",
     "# submit to \n",
-    "sub_name = 'class_adding_best_kaggle.csv'"
+    "sub_name = 'three_models.csv'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/till/.local/lib/python3.10/site-packages/pytorch_tabnet/abstract_model.py:75: UserWarning: Device used : cpu\n",
-      "  warnings.warn(f\"Device used : {self.device}\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#define models to be used for testing use 03 for submission use full\n",
     "import pickle\n",
     "xgb = XGBClassifier()\n",
-    "xgb.load_model('models/xg/03_smote100.json')\n",
+    "xgb.load_model('models/xg/full_smote100.json')\n",
     "\n",
     "rf = pickle.load(open('./models/rf/train_prep_full_best' , 'rb'))\n",
     "\n",
     "boost_emb = XGBClassifier()\n",
-    "boost_emb.load_model('models/nlp/xgboost_03.json')\n",
-    "\n",
-    "nn = TabNetClassifier()\n",
-    "nn.load_model('models/nn/tabnet_03.zip')"
+    "boost_emb.load_model('models/nlp/bal_full_xg_emb.json')"
    ]
   },
   {
@@ -165,7 +153,6 @@
     "if not full: results['type'] = y_test\n",
     "\n",
     "#results['rf'] = rf.predict(X_test)\n",
-    "results['nn'] = nn.predict(X_test.values)\n",
     "#results['xg'] = xgb.predict_proba(X_test)\n",
     "\n",
     "results['filter'] = [-1] * len(results)\n",
@@ -187,12 +174,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_7202/1817881700.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_16679/1817881700.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  results['xg'].iloc[i] = np.array(item)\n",
-      "/tmp/ipykernel_7202/1817881700.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_16679/1817881700.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -216,7 +203,7 @@
    "source": [
     "text = test_curie.copy() if full else train_curie.copy()\n",
     "\n",
-    "features = list(text.curie_similarity.values)\n",
+    "features = text.drop('type', axis=1)\n",
     "labels = text.type\n",
     "\n",
     "#text['pred'] = boost_emb.predict_proba(features)\n",
@@ -227,7 +214,19 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_16679/2524059003.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  text['pred'].iloc[i] = np.array(item)\n"
+     ]
+    }
+   ],
    "source": [
     "for i,item in enumerate(boost_emb.predict_proba(features)):\n",
     "    text['pred'].iloc[i] = np.array(item)"
@@ -237,8 +236,20 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n# establish our own rules to determine type from text - eventually not beneficial\\ntext['filter'] = text.text_features.apply(filtering) # check for the type in the text\\ntext['indicating'] = text.text_features.apply(indicating) # check for other often occuring type indicating words\\ntext['save'] = text.text_features.apply(save_indicating) # only check for words that (almost) only occur with a certain type\\n\\ntext['filter'] = text['filter'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\\ntext['indicating'] = text['indicating'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\\ntext['save'] = text['save'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\\n\\nfor index, item in text.iterrows():\\n        if index in results.index:\\n            results.at[index, 'filter'] = item['filter']\\n            results.at[index, 'indi'] = item['indicating']\\n            results.at[index, 'save'] = item['save']\\n            results.at[index, 'emb'] = item['pred']\\n\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\"\"\"\n",
     "# establish our own rules to determine type from text - eventually not beneficial\n",
     "text['filter'] = text.text_features.apply(filtering) # check for the type in the text\n",
     "text['indicating'] = text.text_features.apply(indicating) # check for other often occuring type indicating words\n",
@@ -253,6 +264,18 @@
     "            results.at[index, 'filter'] = item['filter']\n",
     "            results.at[index, 'indi'] = item['indicating']\n",
     "            results.at[index, 'save'] = item['save']\n",
+    "            results.at[index, 'emb'] = item['pred']\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, item in text.iterrows():\n",
+    "        if index in results.index:\n",
     "            results.at[index, 'emb'] = item['pred']"
    ]
   },
@@ -265,48 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nfrom statistics import mode\\ndef vote(predictions):\\n    if predictions[0] != -1:\\n        return predictions[0]\\n    if -1 in predictions: predictions.remove(-1)\\n    return mode(predictions)\\n\\nresults['prediction'] = results.apply(lambda row: vote([row.save,row.xg,row.rf,row.emb]), axis=1)\\n\""
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# from previous approach for hard voting on predicted classes\n",
-    "\"\"\"\n",
-    "from statistics import mode\n",
-    "def vote(predictions):\n",
-    "    if predictions[0] != -1:\n",
-    "        return predictions[0]\n",
-    "    if -1 in predictions: predictions.remove(-1)\n",
-    "    return mode(predictions)\n",
-    "\n",
-    "results['prediction'] = results.apply(lambda row: vote([row.save,row.xg,row.rf,row.emb]), axis=1)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from operator import add\n",
     "def vote(preds):\n",
-    "    xg = np.array(preds[0])\n",
-    "    emb = np.array(preds[1])\n",
-    "    if emb[0] != -1:\n",
-    "        res = xg + emb\n",
-    "    else:\n",
-    "        res = xg\n",
+    "    if preds[-1][0] == -1:\n",
+    "        preds = preds[:-1]\n",
+    "    res = np.sum(preds, axis=0)\n",
     "    return np.argmax(res)"
    ]
   },
@@ -314,82 +304,32 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9783333333333334\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      0.92      0.96        13\n",
-      "           1       1.00      1.00      1.00       240\n",
-      "           2       1.00      1.00      1.00        20\n",
-      "           3       1.00      1.00      1.00         1\n",
-      "           4       0.98      0.99      0.99       162\n",
-      "           5       1.00      1.00      1.00        11\n",
-      "           6       1.00      0.94      0.97        17\n",
-      "           7       1.00      1.00      1.00         2\n",
-      "           8       1.00      1.00      1.00        52\n",
-      "           9       1.00      0.86      0.92         7\n",
-      "          10       1.00      1.00      1.00         3\n",
-      "          11       1.00      0.98      0.99       270\n",
-      "          12       1.00      1.00      1.00        57\n",
-      "          13       1.00      1.00      1.00        12\n",
-      "          14       0.95      0.89      0.92       125\n",
-      "          15       1.00      1.00      1.00         3\n",
-      "          16       1.00      0.95      0.97        20\n",
-      "          17       0.60      1.00      0.75         3\n",
-      "          18       0.97      1.00      0.98        62\n",
-      "          19       0.77      0.77      0.77        30\n",
-      "          20       1.00      1.00      1.00         6\n",
-      "          21       1.00      1.00      1.00        10\n",
-      "          22       0.91      0.93      0.92       197\n",
-      "          23       1.00      0.80      0.89        10\n",
-      "          24       1.00      0.83      0.91         6\n",
-      "          25       0.97      0.94      0.95        33\n",
-      "          26       0.98      0.98      0.98       163\n",
-      "          27       1.00      1.00      1.00        22\n",
-      "          28       1.00      1.00      1.00         4\n",
-      "          29       1.00      1.00      1.00        30\n",
-      "          30       1.00      1.00      1.00        61\n",
-      "          31       1.00      1.00      1.00         8\n",
-      "          32       0.86      0.91      0.89        34\n",
-      "          33       1.00      1.00      1.00         5\n",
-      "          34       1.00      0.50      0.67         2\n",
-      "          35       1.00      0.80      0.89         5\n",
-      "          36       0.98      1.00      0.99      1067\n",
-      "          37       0.99      1.00      0.99       685\n",
-      "          38       1.00      0.88      0.93        16\n",
-      "          39       1.00      1.00      1.00         9\n",
-      "          40       0.00      0.00      0.00         5\n",
-      "          41       0.95      0.98      0.97       213\n",
-      "          42       0.97      0.75      0.85        48\n",
-      "          43       1.00      1.00      1.00       237\n",
-      "          44       1.00      1.00      1.00         6\n",
-      "          45       1.00      1.00      1.00        48\n",
-      "          46       1.00      0.67      0.80         6\n",
-      "          47       1.00      1.00      1.00        10\n",
-      "          48       1.00      1.00      1.00        63\n",
-      "          49       1.00      1.00      1.00         3\n",
-      "          50       1.00      1.00      1.00        19\n",
-      "          51       1.00      0.96      0.98        27\n",
-      "          52       1.00      1.00      1.00         5\n",
-      "          53       1.00      1.00      1.00         3\n",
-      "          54       0.81      0.92      0.86        24\n",
-      "\n",
-      "    accuracy                           0.98      4200\n",
-      "   macro avg       0.96      0.93      0.94      4200\n",
-      "weighted avg       0.98      0.98      0.98      4200\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results['prediction'] = results.apply(lambda row: vote([row.xg,row.emb]), axis=1)\n",
+    "results['prediction'] = results.apply(lambda row: vote([row.xg,row.rf,row.emb]), axis=1)\n",
     "if not full:\n",
     "    print(accuracy_score(results.type, results.prediction))\n",
     "    print(classification_report(results.type, results.prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 == np.array([1,2])"
    ]
   },
   {
@@ -401,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
