combine preparation, threshold via percentage from top

--- a/Improving-the-quality-of-museums-data.ipynb
+++ b/Improving-the-quality-of-museums-data.ipynb
@@ -209,246 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ks</th>\n",
-       "      <th>start</th>\n",
-       "      <th>end</th>\n",
-       "      <th>value</th>\n",
-       "      <th>musealia_seria_nr</th>\n",
-       "      <th>musealia_queue_nr</th>\n",
-       "      <th>collection_queue_nr</th>\n",
-       "      <th>element_count</th>\n",
-       "      <th>is_original</th>\n",
-       "      <th>material_RC fotopaber</th>\n",
-       "      <th>...</th>\n",
-       "      <th>participant_Пильский, Петръ</th>\n",
-       "      <th>participant_Польза</th>\n",
-       "      <th>participant_Преображенский, А.В.</th>\n",
-       "      <th>participant_Просвещение</th>\n",
-       "      <th>participant_Редакция Наука и Жизнь</th>\n",
-       "      <th>participant_Советский Композитор</th>\n",
-       "      <th>participant_Стасов, В.В.</th>\n",
-       "      <th>participant_Универсальная Библиотека</th>\n",
-       "      <th>participant_Юзовский, Ю</th>\n",
-       "      <th>musealia_mark__</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6066</th>\n",
-       "      <td>473.0</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>59.5</td>\n",
-       "      <td>8540.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13352</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5475.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6444</th>\n",
-       "      <td>174.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>41.5</td>\n",
-       "      <td>8974.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12316</th>\n",
-       "      <td>4094.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>6514.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1834</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>23607.0</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 3797 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           ks start  end  value  musealia_seria_nr  musealia_queue_nr  \\\n",
-       "6066    473.0  1970  0.0   59.5             8540.0                0.0   \n",
-       "13352     0.0     0  0.0    0.0             5475.0                0.0   \n",
-       "6444    174.0     0  0.0   41.5             8974.0                0.0   \n",
-       "12316  4094.0     0  0.0    2.8             6514.0                0.0   \n",
-       "1834      0.0     0  0.0   12.0            23607.0               54.0   \n",
-       "\n",
-       "       collection_queue_nr  element_count  is_original  material_RC fotopaber  \\\n",
-       "6066                  13.0            1.0          1.0                      0   \n",
-       "13352                  1.0            1.0          1.0                      0   \n",
-       "6444                   2.0            1.0          1.0                      0   \n",
-       "12316                  0.0            1.0          0.0                      0   \n",
-       "1834                   0.0            1.0          1.0                      0   \n",
-       "\n",
-       "       ...  participant_Пильский, Петръ  participant_Польза  \\\n",
-       "6066   ...                            0                   0   \n",
-       "13352  ...                            0                   0   \n",
-       "6444   ...                            0                   0   \n",
-       "12316  ...                            0                   0   \n",
-       "1834   ...                            0                   0   \n",
-       "\n",
-       "       participant_Преображенский, А.В.  participant_Просвещение  \\\n",
-       "6066                                  0                        0   \n",
-       "13352                                 0                        0   \n",
-       "6444                                  0                        0   \n",
-       "12316                                 0                        0   \n",
-       "1834                                  0                        0   \n",
-       "\n",
-       "       participant_Редакция Наука и Жизнь  participant_Советский Композитор  \\\n",
-       "6066                                    0                                 0   \n",
-       "13352                                   0                                 0   \n",
-       "6444                                    0                                 0   \n",
-       "12316                                   0                                 0   \n",
-       "1834                                    0                                 0   \n",
-       "\n",
-       "       participant_Стасов, В.В.  participant_Универсальная Библиотека  \\\n",
-       "6066                          0                                     0   \n",
-       "13352                         0                                     0   \n",
-       "6444                          0                                     0   \n",
-       "12316                         0                                     0   \n",
-       "1834                          0                                     0   \n",
-       "\n",
-       "       participant_Юзовский, Ю  musealia_mark__  \n",
-       "6066                         0                1  \n",
-       "13352                        0                1  \n",
-       "6444                         0                1  \n",
-       "12316                        0                1  \n",
-       "1834                         0                1  \n",
-       "\n",
-       "[5 rows x 3797 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RF accuracy on validation data is: 0.8985714285714286\n",
+      "New accuracy on validation data is: 0.9154761904761904\n"
+     ]
     }
    ],
-   "source": [
-    "X_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#train model\n",
     "model = RandomForestClassifier(max_depth=800, n_estimators=200, random_state=0)\n",
@@ -480,17 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df_submission = pd.read_csv(\"test.csv\")\n",
+    "df_submission = pd.read_csv(\"data/general/test.csv\")\n",
     "x2 = preprocess_dataframe(df_submission, submission=True)\n",
     "# reorder columns + add missing columns + remove extra columns\n",
     "x2_labels = x2.apply(extract_label_from_comment, axis=1)\n",
-    "x2 = x2.reindex(columns=x.columns).fillna(0)\n",
+    "x2 = x2.reindex(columns=x2.columns).fillna(0)\n",
     "\n",
     "# best result\n",
     "#model = RandomForestClassifier(max_depth=800, n_estimators=200, random_state=0).fit(x, y.values.ravel())\n",
@@ -499,7 +271,7 @@
     "submission = pd.DataFrame({'id': df_submission['id'], 'type': y_submission})\n",
     "submission.groupby('type').nunique()  # predicted classes\n",
     "\n",
-    "submission.to_csv('submission.csv', index=False)"
+    "submission.to_csv('submissions/kaspar.csv', index=False)"
    ]
   }
  ],
@@ -519,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "vscode": {
    "interpreter": {
