--- a/prep_embeddings.ipynb
+++ b/prep_embeddings.ipynb
@@ -16,125 +16,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = curie.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "data.drop(columns=['text_features'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.set_index('id', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "split = pd.DataFrame(data.curie_similarity.tolist(), index=data.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "concat = pd.concat([data, split], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "concat.drop(columns=['curie_similarity'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "concat.to_csv('data/text_embeddings/curie.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curie = pd.read_csv('data/text_embeddings/curie.csv', index_col='id', dtype={'type': str})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data = curie.copy()\n",
+    "data.drop(columns=['text_features'], inplace=True)\n",
+    "data.set_index('id', inplace=True)\n",
+    "split = pd.DataFrame(data.curie_similarity.tolist(), index=data.index)\n",
+    "concat = pd.concat([data, split], axis=1)\n",
+    "concat.drop(columns=['curie_similarity'], inplace=True)\n",
+    "concat.to_csv('data/text_embeddings/curie.csv')\n",
+    "curie = pd.read_csv('data/text_embeddings/curie.csv', index_col='id', dtype={'type': str})\n",
     "train = curie[curie.source == 'train']\n",
-    "test = curie[curie.source == 'test']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_6959/643585423.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  train.drop(columns=['source'], inplace=True)\n",
-      "/tmp/ipykernel_6959/643585423.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  test.drop(columns=['source'], inplace=True)\n"
-     ]
-    }
-   ],
-   "source": [
+    "test = curie[curie.source == 'test']\n",
     "train.drop(columns=['source'], inplace=True)\n",
-    "test.drop(columns=['source'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test.drop(columns=['source'], inplace=True)\n",
     "train.to_csv('data/text_embeddings/train_curie.csv')\n",
     "test.to_csv('data/text_embeddings/test_curie.csv')"
    ]
